--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,9 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="513dp"
+        android:layout_width="0sp"
+        android:layout_height="513sp"
+        android:adjustViewBounds="true"
         android:contentDescription="@string/grid"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,8 +37,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="424dp"
-        android:layout_height="489dp"
+        android:layout_width="397dp"
+        android:layout_height="476dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,6 +58,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:adjustViewBounds="true"
                 android:onClick="playerTap"
                 android:padding="20dp"
                 android:tag="1"
@@ -67,6 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:adjustViewBounds="true"
                 android:onClick="playerTap"
                 android:padding="20dp"
                 android:tag="2"
@@ -77,6 +80,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:adjustViewBounds="true"
                 android:onClick="playerTap"
                 android:padding="20dp"
                 android:tag="3"
@@ -94,6 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:adjustViewBounds="true"
                 android:onClick="playerTap"
                 android:padding="20dp"
                 android:tag="4"
@@ -104,6 +109,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:adjustViewBounds="true"
                 android:onClick="playerTap"
                 android:padding="20dp"
                 android:tag="5"
@@ -114,6 +120,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:adjustViewBounds="true"
                 android:onClick="playerTap"
                 android:padding="20dp"
                 android:tag="6"
@@ -131,6 +138,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:adjustViewBounds="true"
                 android:onClick="playerTap"
                 android:padding="20dp"
                 android:tag="7"
@@ -141,6 +149,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:adjustViewBounds="true"
                 android:onClick="playerTap"
                 android:padding="20dp"
                 android:tag="8"
@@ -151,6 +160,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:adjustViewBounds="true"
                 android:onClick="playerTap"
                 android:padding="20dp"
                 android:tag="9"
